"Align to transform Orientation" crashes blender for Custom transform orientations #76933

Closed
opened 2020-05-21 07:57:47 +02:00 by vprime · 12 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50

Blender Version
Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-20 20:56, hash: 8a0840b0ee
Worked: 2.82a

Short description of error
Aligning any object to custom transform orientation crashes blender 2.9

Exact steps for others to reproduce the error
Rotate default cube
Select one of the faces and add custom face orientation in edit mode

add new object
do "Align object to transform orientation" on new object
select custom face orientation from its properties box

Crash

crash.blend

bug.png

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50 **Blender Version** Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-20 20:56, hash: `8a0840b0ee` Worked: 2.82a **Short description of error** Aligning any object to custom transform orientation crashes blender 2.9 **Exact steps for others to reproduce the error** Rotate default cube Select one of the faces and add custom face orientation in edit mode add new object do "Align object to transform orientation" on new object select custom face orientation from its properties box Crash [crash.blend](https://archive.blender.org/developer/F8545971/crash.blend) ![bug.png](https://archive.blender.org/developer/F8545972/bug.png)
Author

Added subscriber: @V-prime

Added subscriber: @V-prime

#76946 was marked as duplicate of this issue

#76946 was marked as duplicate of this issue
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm 2.90 8a0840b0ee (2020-05-20 20:56) and on Linux. It does not appear this issue occurs in Blender 2.83 testing with af3a55bb1b (2020-05-20 20:54).

Testing old builds I have on my computer, the issue occurred in a patch before f9d0f59bed and after 542ff416e2.

Can confirm 2.90 `8a0840b0ee` (2020-05-20 20:56) and on Linux. It does not appear this issue occurs in Blender 2.83 testing with `af3a55bb1b` (2020-05-20 20:54). Testing old builds I have on my computer, the issue occurred in a patch before f9d0f59bed and after 542ff416e2.
Member

289242fef9 could be the cause.

289242fef9 could be the cause.
Member

#76933 - Crash Log.txt

Here's the crash log.

[#76933 - Crash Log.txt](https://archive.blender.org/developer/F8546067/T76933_-_Crash_Log.txt) Here's the crash log.

Added subscribers: @mano-wii, @ideasman42

Added subscribers: @mano-wii, @ideasman42

@mano-wii looks similar to #76630.

@mano-wii looks similar to #76630.

This issue was referenced by de7d32bb7d

This issue was referenced by de7d32bb7dcc7364a07fe23ab0205c70d1db06e4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-05-21 16:01:32 +02:00

Added subscriber: @heavypoly

Added subscriber: @heavypoly
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76933
No description provided.