Fix T76933: 'Align to Transform Orientation' crashes for Custom orientations